# atlas

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: decisions.md  roadmap.md
examples/tiny/: main.tf  terraform.tfstate  terraform.tfstate.backup
src/atlas/: cli.py  errors.py
src/atlas/graph/: impact.py
src/atlas/scoring/: heuristics.py
src/atlas/terraform/: parser.py
tests/: test_impact.py  test_parser.py  test_scoring.py
tests/fixtures/: plan_chain.json  plan_small.json  plan_update.json
